[package]
name = "scilla"
version = "0.1.0"
edition = "2024"

[dependencies]
inquire = "0.9.1"
console = "0.16.1"
indicatif = "0.18.3"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "tokio-macros",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
thiserror = "2.0.17"
solana-rpc-client = "3.0.10"
solana-rpc-client-api = "3.0.10"
solana-keypair = "3.1.0"
solana-commitment-config = "3.1.0"
solana-pubkey = "4.0.0"
solana-stake-interface = { version = "2.0.2", features = ["bincode"] }
solana-account = { version = "3.2.0", features = ["bincode"] }
solana-clock = "3.0.0"
solana-sysvar = "3.1.1"
bincode = "1.3"
solana-signature = "3.1.0"
solana-nonce = "3.0.0"
chrono = "0.4"
comfy-table = "7.1"
solana-sdk-ids = "3.1.0"