[workspace]
resolver = "2"
members = ["crates/scilla", "crates/solana-tpu-client-next"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["blueshift-gg"]
version = "0.1.0"
repository = "https://github.com/blueshift-gg/Scilla"
readme = "README.md"


[workspace.dependencies]
# core
anyhow = "1.0.100"
thiserror = { version = "2.0.17", default-features = false }
serde = { version = "1.0.149", features = ["derive"] }
bincode = "1.3.3"
chrono = "0.4"
base64 = "0.22.1"
bs58 = "0.5.1"
dirs = "6.0.0"
toml = "0.9.8"
serde_json = "1.0.149"

# async
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "tokio-macros",
    "macros",
] }

# cli / ui
inquire = "0.9.1"
console = "0.16.1"
indicatif = "0.18.3"
comfy-table = "7.2.2"

# solana
solana-vote-interface = "4.0.0"
solana-instruction = "3.1.0"
solana-message = "3.0.1"
solana-stake-interface = { version = "2.0.2", features = ["bincode"] }
solana-transaction = "3.0.2"
solana-account = { version = "3.2.0", features = ["bincode"] }
solana-epoch-info = "3.1.0"
solana-rpc-client = "3.1.6"
solana-rpc-client-api = "3.1.6"
solana-sdk-ids = "3.1.0"
solana-clock = "3.0.0"
solana-sysvar = "3.1.1"
solana-keypair = "3.1.0"
solana-commitment-config = "3.1.0"
solana-pubkey = "4.0.0"
solana-signature = "3.1.0"
solana-nonce = "3.0.0"
solana-transaction-status = "3.1.4"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-account-decoder = "3.1.6"

# build
sbpf-linker = "0.1.6"
