[package]
name = "solana-tpu-client-next"
description = "Client code to send transaction to TPU."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
agave-unstable-api = []
dev-context-only-utils = []
metrics = ["dep:solana-metrics"]
tracing = ["dep:tracing"]
websocket-node-address-service = [
    "dep:solana-pubsub-client",
    "dep:tokio-stream",
]

[dependencies]

async-trait = "0.1.89"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.29"
lru = "0.16.3"
quinn = "0.11.9"
rustls = "0.23.36"
serde = { version = "1.0.149", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.18", optional = true }
tokio-util = "0.7.18"
tracing = { version = "0.1.44", optional = true }

# Solana-specific crates (matching the recent 2.x or 3.x series)
solana-clock = "3.0.0"
solana-commitment-config = "3.1.0"
solana-epoch-schedule = "3.0.0"
solana-keypair = "3.1.0"
solana-measure = "3.1.6"
solana-metrics = { version = "3.1.6", optional = true }       # optional
solana-pubkey = "3.0.0"
solana-pubsub-client = { version = "3.1.6", optional = true } # optional
solana-rpc-client = "3.1.6"
solana-rpc-client-api = "3.1.6"
solana-streamer = "3.1.6"
solana-time-utils = "3.0.0"
solana-tls-utils = "3.1.6"


[dev-dependencies]
crossbeam-channel = "0.5.15"
futures = "0.3.31"
serde_json = "1.0.149"

solana-cli-config = "3.1.6"
solana-commitment-config = "3.1.0"
solana-net-utils = "3.1.6"
solana-pubkey = "4.0.0"
solana-signer = "3.0.0"

solana-streamer = { version = "3.1.6", features = ["dev-context-only-utils"] }

solana-tpu-client-next = { path = ".", features = [
    "agave-unstable-api",
    "websocket-node-address-service",
    "dev-context-only-utils",
] }
